--- a/index.html
+++ b/index.html
@@ -14,51 +14,73 @@
 
     <body>
 
-        <header>
-            <div>
-                <h1> NuCamp </h1>
-                <h2> a better way to camp </h2>
+        <header class="jumbotron">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1> NuCamp </h1>
+                        <h2> a better way to camp </h2>
+                    </div>
+                </div>
             </div>
         </header>
 
-        <div>
-            <h2> Discover & Review </h2>
-            <h3> Our Campsites</h3>
-            <p> Explore our growing database of curated campsites and leave your own reviews! </p>
-        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 order-sm-last col-md-3">
+                    <h2> Discover & Review </h2>
+                </div>
+                <div class="col">
+                    <h3> Our Campsites</h3>
+                    <p> Explore our growing database of curated campsites and leave your own reviews! </p>
+                </div>
+            </div>
 
-        <div>
-            <h2> Featured Campistes </h2>
-            <h3>React Lake Campground </h3>
-            <p> Nestled in the foothills of the Chrome mountains, this campground on the shores of the pristine React Lake is a favorite for our fly fishers. </p> 
-        </div>
+            <div class="row">
+                <div clas="col-sm-4 col-md-3">
+                    <h2> Featured Campistes </h2>
+                </div>
+                <div class="col">
+                    <h3>React Lake Campground </h3>
+                    <p> Nestled in the foothills of the Chrome mountains, this campground on the shores of the pristine React Lake is a favorite for our fly fishers. </p> 
+                </div>
+            </div>
 
-        <div>
-            <h2> Our Commnity Partners </h2>
-            <h3> Bootstrap Outfitters </h3>
-            <p> Bootstrap Outfitters supplies you with gear you need at prices you can't beat. </p>
+            <div class="row">
+                <div clas="col-sm-4 order-sm-last col-md-3">
+                    <h2> Our Commnity Partners </h2>
+                </div>
+                <div class="col">
+                    <h3> Bootstrap Outfitters </h3>
+                    <p> Bootstrap Outfitters supplies you with gear you need at prices you can't beat. </p>
+                </div>
+            </div>
         </div>
 
         <footer>
-            <div>
-                <h5> Links </h5>
-                <ul>
-                    <li> <a href="#"> Home </a> </li>
-                    <li> <a href="#"> About </a> </li>
-                    <li> <a href="#"> Sites </a> </li>
-                    <li> <a href="#"> Contact </a> </li>
-                </ul>
-            </div>
-            <div>
-                <h5> Social </h5>
-                <a href="http://instagram"> Instagram </a>
-                <a href="http://facebook"> Facebook </a>
-                <a href="http://twitter.com"> Twitter </a>
-                <a href="http://youtube.com"> Youtube </a>
-            </div>
-            <div>
-                Tel: 1-206-555-1234 <br />
-                Emal: campsites@nucamp.co
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 col-sm-2 offset-1">
+                        <h5> Links </h5>
+                        <ul class="list-unstyled">
+                            <li> <a href="#"> Home </a> </li>
+                            <li> <a href="#"> About </a> </li>
+                            <li> <a href="#"> Sites </a> </li>
+                            <li> <a href="#"> Contact </a> </li>
+                        </ul>
+                    </div>
+                    <div class="col-6 col-sm-5">
+                        <h5> Social </h5>
+                        <a href="http://instagram"> Instagram </a>
+                        <a href="http://facebook"> Facebook </a>
+                        <a href="http://twitter.com"> Twitter </a>
+                        <a href="http://youtube.com"> Youtube </a>
+                    </div>
+                    <div class="col-sm-4">
+                        Tel: 1-206-555-1234 <br />
+                        Email: campsites@nucamp.co
+                    </div>
+                </div>
             </div>
         </footer>
 
