--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
        <!-- Bootstrap CSS-->
-        <link rel="stylesheet" href="nodes_modules/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
     
        <!--Additional CSS must be placed after Bootstrap CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
@@ -29,6 +29,22 @@
             </div>
         </header>
 
+        <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+            <div class="container">
+                <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                    <span class="navbar-toggler-icon"> </span>
+                </button>
+                    <div class="collapse navbar-collapse" id="nucampNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active"> <a class="nav-link" href="#"> Home </a> </li>
+                            <li class="nav-item"> <a class="nav-link" href="aboutus.html"> About Us </a> </li>
+                            <li class="nav-item">  <a class="nav-link" href="#"> Sites </a> </li>
+                            <li class="nav-item"> <a class="nav-link" href="#"> Contact </a> </li>
+                        </ul>
+                    </div>
+            </div>
+        </nav>
+
         <div class="container">
             <div class="row row-content align-items-center">
                 <div class="col-sm-4 order-sm-last col-md-3">
@@ -36,27 +52,27 @@
                 </div>
                 <div class="col">
                     <h3> Our Campsites</h3>
-                    <p> Explore our growing database of curated campsites and leave your own reviews! </p>
+                    <p class="d-none d-sm-block"> Explore our growing database of curated campsites and leave your own reviews! </p>
                 </div>
             </div>
 
             <div class="row row-content align-items-center">
-                <div clas="col-sm-4 col-md-3">
+                <div clas3="col-sm-4 col-md-3">
                     <h2> Featured Campistes </h2>
                 </div>
                 <div class="col">
                     <h3>React Lake Campground </h3>
-                    <p> Nestled in the foothills of the Chrome mountains, this campground on the shores of the pristine React Lake is a favorite for our fly fishers. </p> 
+                    <p class="d-none d-sm-block"> Nestled in the foothills of the Chrome mountains, this campground on the shores of the pristine React Lake is a favorite for our fly fishers. </p> 
                 </div>
             </div>
 
             <div class="row row-content align-items-center">
-                <div clas="col-sm-4 order-sm-last col-md-3">
+                <div class="col-sm-4 order-sm-last col-md-3">
                     <h2 class="text-sm-right"> Our Commnity Partners </h2>
                 </div>
                 <div class="col">
                     <h3> Bootstrap Outfitters </h3>
-                    <p> Bootstrap Outfitters supplies you with gear you need at prices you can't beat. </p>
+                    <p class="d-none d-sm-block"> Bootstrap Outfitters supplies you with gear you need at prices you can't beat. </p>
                 </div>
             </div>
         </div>
@@ -68,7 +84,7 @@
                         <h5> Links </h5>
                         <ul class="list-unstyled">
                             <li> <a href="#"> Home </a> </li>
-                            <li> <a href="#"> About </a> </li>
+                            <li> <a href="aboutus.html"> About </a> </li>
                             <li> <a href="#"> Sites </a> </li>
                             <li> <a href="#"> Contact </a> </li>
                         </ul>
