--- a/aboutus.html
+++ b/aboutus.html
@@ -11,6 +11,7 @@
 
        <!--Additional CSS must be placed after Bootstrap CSS -->
        <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+       <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
        <link rel="stylesheet" href="css/styles.css" />
 
@@ -32,7 +33,7 @@
 
         <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
             <div class="container">
-                <button class="navbar-toggle ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                     <span class="navbar-toggler-icon"> </span>
                 </button>
                     <div class="collapse navbar-collapse" id="nucampNavbar">
@@ -40,7 +41,7 @@
                             <li class="nav-item"> <a class="nav-link" href="index.html"> <i class="fa fa-home fa-lg"> </i> Home </a> </li>
                             <li class="nav-item active"> <a class="nav-link" href="#"> <i class="fa fa-info fa-lg"> </i> About Us </a> </li>
                             <li class="nav-item">  <a class="nav-link" href="#"> <i class="fa fa-list fa-lg"> </i> Sites </a> </li>
-                            <li class="nav-item"> <a class="nav-link" href="#"> <i class="fa fa-address-card fa-lg"> </i> Contact </a> </li>
+                            <li class="nav-item"> <a class="nav-link" href="contactus.html"> <i class="fa fa-address-card fa-lg"> </i> Contact </a> </li>
                         </ul>
                     </div>
             </div>
@@ -86,22 +87,22 @@
                     <div class="col-4 col-sm-2 offset-1">
                         <h5> Links </h5>
                         <ul class="list-unstyled">
-                            <li> <a href="#"> Home </a> </li>
-                            <li> <a href="aboutus.html"> About </a> </li>
+                            <li> <a href="index.html"> Home </a> </li>
+                            <li> <a href="#"> About </a> </li>
                             <li> <a href="#"> Sites </a> </li>
-                            <li> <a href="#"> Contact </a> </li>
+                            <li> <a href="contactus.html"> Contact </a> </li>
                         </ul>
                     </div>
                     <div class="col-6 col-sm-5 text-center">
                         <h5> Social </h5>
-                        <a href="http://instagram"> <i class="fa fa-instagram"> </i>  Instagram </a>
-                        <a href="http://facebook"> <i class="fa fa-facebook"> </i> Facebook </a>
-                        <a href="http://twitter.com"> <i class="fa fa-twitter"> </i> Twitter </a>
-                        <a href="http://youtube.com"> <i class="fa fa-youtube"> </i> Youtube </a>
+                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
                     </div>
                     <div class="col-sm-4 text-center">
-                        <i class="fa fa-phone fa-lg text-primary"> </i>Tel: 1-206-555-1234 <br />
-                        <i class="fa fa-envelope fa-lg text-primary"> </i>Email: campsites@nucamp.co
+                        <a role="button" class="btn btn-link" href="tel:+12065551234"> <i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234 </a> <br />
+                        <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"> <i class="fa fa-envelope-o fa-lg text-primary"></i> campsites@nucamp.co </a>
                     </div>
                 </div>
             </div>
