--- a/contactus.html
+++ b/contactus.html
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="areaCode" class="col-md-2 col-form label"> Contact Tel. </label>
+                        <label for="areaCode" class="col-md-2 col-form-label"> Contact Tel. </label>
                         <div class="col-5 col-md-3">
                             <input type="tel" class="form-control" id="areaCode" name="areaCode" placeholder="Area Code" />
                         </div>
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="email"  class="col-md-2 col-form label"> Email </label>
+                        <label for="email"  class="col-md-2 col-form-label"> Email </label>
                         <div class="col-md-10">
                             <input type="email" class="form-control" id="email" name="email" placeholder="Email" />
                         </div>
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="feedback" class="col-md-2 col-form label"> Your Feedback </label>
+                        <label for="feedback" class="col-md-2 col-form-label"> Your Feedback </label>
                         <div class="col-md-10">
                             <textarea class="form-control" id="feedback" name="feedback" rows="8"> </textarea>
                         </div>
